Closed Bug 1061920 Opened 10 years ago Closed 10 years ago

Fix bugs in PrependLocalTransformsTo implementations where we forget to prepend to the matrix that is passed in

Categories

(Core :: SVG, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: jwatt, Assigned: jwatt)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
      No description provided.
Attachment #8482987 - Flags: review?(longsonr)
Hmm, SVGForeignObjectElement is wrong too isn't it? Please check any other cases.
Attachment #8482987 - Flags: review?(longsonr)
Flags: needinfo?(jwatt)
Good catch. SVGUseElement too. Those didn't trigger failures, but we should fix them.
Flags: needinfo?(jwatt)
Attached patch patchSplinter Review
Attachment #8482987 - Attachment is obsolete: true
Attachment #8483096 - Flags: review?(longsonr)
Summary: Fix a bug in SVGSVGElement::PrependLocalTransformsTo where we forget to prepend to the past matrix → Fix bugs in PrependLocalTransformsTo implementations where we forget to prepend to the matrix that is passed in
Attachment #8483096 - Flags: review?(longsonr) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/ce99d180c6fb
OS: Mac OS X → All
Hardware: x86 → All
https://hg.mozilla.org/mozilla-central/rev/ce99d180c6fb
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: