Bug 1061920 - Fix bugs in PrependLocalTransformsTo implementations where we forget to prepend to the matrix that is passed in. r=longsonr